# feedgate-fetcher

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
.omc/artifacts/ask/: codex-analyze-this-feedgate-fetcher-repository-thoroughly-look-at--2026-04-24T01-41-41-918Z.md
.omc/plans/: ralplan-feedgate-walking-skeleton.md
.omc/sessions/: 800d9544-be0c-4bb7-afeb-bef78279f8f1.json  9ed2c0f2-14af-4bbb-8cb8-b1e950dbae75.json
.omc/specs/: deep-interview-feedgate-walking-skeleton.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_claim_index_coverage.py  0003_retention_index.py  0004_drop_dead_etag_columns.py  0005_etag_last_modified.py
docs/adr/: 000-service-purpose-and-scope.md  001-core-data-model.md  002-http-api-contract.md  003-collection-is-internal-implementation.md  004-entry-retention-policy.md
docs/deploy/: local-multi-worker.md
docs/notes/: collection-scaling-research.md
docs/spec/: api.md  entry.md  feed.md  resilience.md
docs/tests/: resilience-test-cases.md
scripts/: live_verify.py  live_verify_loop.sh  overnight_setup.sh  overnight_teardown.sh  seed_feeds.py
src/feedgate/: __init__.py  config.py  db.py  errors.py  lifecycle.py  logging_config.py  main.py  metrics.py  models.py  retention.py  schemas.py  urlnorm.py
src/feedgate/api/: __init__.py  entries.py  feeds.py  health.py
src/feedgate/fetcher/: __init__.py  http.py  parser.py  retention.py  scheduler.py  upsert.py
src/feedgate_fetcher/: __init__.py  config.py  feed_state.py  logging_config.py  main.py  metrics.py  schemas.py  ssrf.py
src/feedgate_fetcher/api/: __init__.py  dependencies.py  entries.py  errors.py  feeds.py  middleware.py  router.py
src/feedgate_fetcher/fetcher/: __init__.py  errors.py  fallback.py  http.py  parser.py  policy.py  retention.py  scheduler.py  upsert.py
tests/: conftest.py  test_api_auth.py  test_api_entries.py  test_api_feeds.py  test_api_health.py  test_e2e_walking_skeleton.py  test_errors.py  test_fallback.py  test_feed_create_schema.py  test_feed_state.py  test_fetch_one.py  test_foundation.py  test_lifespan_drain.py  test_metrics.py  test_metrics_collector_health.py  test_metrics_freshness.py  test_migrations.py  test_observe_fetch.py  test_parser.py  test_retention.py  test_scheduler_tick.py  test_scheduler_tick_result.py  test_ssrf.py  test_upsert.py  test_urlnorm.py
